2004-12-30 Shane Landrum <epicene@pobox.com>

	* en/Gtk/Scale.xml
	* en/Gtk/Paned.xml
	* en/Gtk/ProgressBar.xml
	* en/Gtk/Plug.xml
	* en/Gtk/MovementStep.xml: Docs, some for 2.4 changes.

2004-12-30 Shane Landrum <epicene@pobox.com>

	* en/Gtk/FilesAddedArgs.xml
	* en/Gtk/FilePath.xml
	* en/Gtk/FilesRemovedArgs.xml
	* en/Gtk/FileFolder.xml
	* en/Gtk/FilesChangedArgs.xml: Filesystem-handling docs.
	* en/Gtk/ObjectRequestedArgs.xml
	* en/Gtk/MatchSelectedArgs.xml
	* en/Gtk/ChangedArgs.xml
	* en/Gtk/ActionActivatedArgs.xml: Event data docs.
	
2004-12-30 Mike Kestner <mkestner@novell.com>

	* en/Gtk/IterFactoryEntry.xml : fix a make assemble breakage.
	* en/Gtk/TreeView.xml : docs for new InsertColumn overloads.

2004-12-30 Shane Landrum <epicene@pobox.com>

	* en/Gtk/ItemFactory.xml
	* en/Gtk/MenuShell.xml
	* en/Gtk/MenuEntry.xml
	* en/Gtk/Menu.xml
	* en/Gtk/ItemFactoryEntry.xml
	* en/Gtk/MenuCallback.xml: Docs for menus and menu creation.
	* en/Gtk/Notebook.xml: Docs for a 2.4 change.

2004-12-30 Shane Landrum <epicene@pobox.com>

	* en/Gtk/TreeViewColumn.xml
	* en/Gtk/TreeStore.xml
	* en/Gtk/TreeView.xml
	* en/Gtk/TreeRowReference.xml
	* en/Gtk/TreeModelFilter.xml: Add docs
	
2004-12-29  John Luke  <john.luke@gmail.com>

	* gen-intptr-ctor-docs.cs: docs for Type (IntPtr) ctor
	* gen-gtype-ctor-docs.cs: docs for Type (GType) ctor
	* gen-finalize-docs.cs: docs Finalize methods
	* gen-gtype-docs.cs: docs GType properties, based off
	of gen-vm-docs.cs
	* en/*.xml: run these 4 tools for all the assemblies

2004-12-29 Shane Landrum <epicene@pobox.com>

	* en/Gtk/FileChooserEmbed.xml
	* en/Gtk/FileChooserDialog.xml
	* en/Gtk/FileChooserWidget.xml
	* en/Gtk/FileFilter.xml
	* en/Gtk/FileFilterFlags.xml
	* en/Gtk/FileChooser.xml: file chooser and filter docs.
	
2004-12-28  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* en/Gnome.Vfs/*.xml: more docs.

2004-12-28  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* en/Gnome.Vfs/*.xml: remove docs for files that no longer exist.
