@@ -389,9 +389,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>
+	  The name of an icon to look up in the current icon theme
+	  to use as a base image when creating icon variants for #GtkIconSet
+	</summary>
         <returns>a <see cref="T:System.String" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
