@@ -70,9 +70,9 @@ A good rule of thumb is that if there is a stock image for what you want to use,
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Returns an integer identifier for an error string.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="AddBuiltinIcon">
