@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Possible errors found while parsing an icon theme file.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -37,8 +37,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>There was an error in the file syntax.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Escapes">
@@ -50,8 +50,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The escapes in the file were invalid.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Chars">
@@ -63,8 +63,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The file contained invalid characters.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="value__">
