@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Delegate for handling a section of an icon theme file.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
