@@ -1,5 +1,14 @@
 2004-12-30 Shane Landrum <epicene@pobox.com>
 
+	* en/Gtk/IconSource.xml
+	* en/Gtk/IconThemeFile.xml
+	* en/Gtk/IconThemeFileParseError.xml
+	* en/Gtk/IconThemeFileSectionFunc.xml
+	* en/Gtk/IconTheme.xml
+	* en/Gtk/IconThemeFileLineFunc.xml: Docs for icon-theme classes.
+
+2004-12-30 Shane Landrum <epicene@pobox.com>
+
 	* en/Gtk/Scale.xml
 	* en/Gtk/Paned.xml
 	* en/Gtk/ProgressBar.xml
